<resources>
    <string name="action_delete_profile">Delete profile</string>
    <string name="title_activity_players">PlayersActivity</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_profile_list">Profiles</string>
    <string name="title_profile_detail">Profile Detail</string>
    <string name="title_match_activity">Match</string>
    <string name="button_start_game">START</string>
    <string name="button_undo">UNDO</string>
    <string name="header_select_players">Select Players</string>
    <string name="statistic_activity_temporary_text">This is the statistics activity</string>
    <string name="button_new_leg">New Leg</string>
    <string name="button_complete_match">Complete Match</string>
    <string name="textView_games_played">Games played</string>
    <string name="player_1">Player 1</string>
    <string name="_301">301</string>
    <string name="contentDescription_handle_to_trigger_drag_event">Handle to trigger drag event</string>
    <string name="contentDescription_main_activity_background_image">Main activity background image</string>
    <string name="button_zero">0</string>
    <string name="one">1</string>
    <string name="button_play_x01">PLAY X01</string>
    <string name="button_play_random">PLAY RANDOM</string>
    <string name="button_profiles">PROFILES</string>
    <string name="button_show_statistics_view">SHOW STATISTICS</string>
    <string name="dart">DART</string>
    <string name="log">LOG</string>
    <string name="average_score">Average: </string>
    <string name="max_score">Max score:</string>
    <string name="double_out">Double-out:</string>
    <string name="single_out">Single-out:</string>
    <string name="double_out_attempts">Double-out (%d):</string>
    <string name="games_won">Games won</string>
    <string name="recent_games">RECENT GAMES</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="button_erase_number">Button to erase the last entered number</string>
    <string name="game_setup">Game Setup</string>
    <string name="score_colon">Score: </string>
    <string name="number_of_fields_colon">Nr of fields: </string>
    <string name="starting_score_settings_label">Starting score:</string>
    <string name="x01">X01</string>
    <string name="field_to_hit">Field</string>
    <string name="result_win">Winner!</string>
    <string name="win">Win</string>
    <string name="loss">Loss</string>
    <string name="setup_play_order">Play order:</string>
    <string name="next">next</string>
    <string name="fewest_turns">Fewest turns</string>
    <string name="highest_out">Highest checkout</string>
    <string name="no_score">No score</string>
    <string name="turn">Turn</string>

    <string name="pref_x01_starting_score">Starting score</string>
    <string name="pref_x01_double_out">Double-out</string>
    <string name="pref_x01_double_out_attempts">Double-out attempts</string>
    <string name="pref_x01_double_out_attempts_dialog">Double-out attempts</string>
    <string name="pref_key_x01_starting_score">pref_x01_starting_score</string>
    <string name="pref_key_x01_double_out_attempts">pref_x01_double_out_attempts</string>
    <string name="pref_key_x01_double_out">pref_x01_double_out</string>
    <string name="pref_x01_double_out_attempts_summary">Single-out after %s turns below 50.</string>
    <string name="pref_key_random_nr_of_rounds">pref_key_nr_of_rounds</string>
    <string name="pref_random_nr_of_rounds">Nr of rounds</string>
    <string name="zero">0</string>
    <string name="submit">SUBMIT</string>
    <string name="drawer_item_statistics">Statistics</string>
    <string name="drawer_item_profiles">Profiles</string>
    <string name="drawer_item_home">Home</string>
    <string name="winner">WINNER</string>
    <string name="random">Random</string>
    <string name="games">Games</string>
    <string name="add_profile">Add profile</string>
    <string name="settings">Settings</string>
    <string name="app_settings_activity">App Settings</string>
    <string name="export_database">export_database</string>
    <string name="import_database">import_database</string>
    <string name="server_address">server_address</string>
    <string name="match_table_3_dart_score_title">Scores per turn</string>
    <string name="result">Result:</string>
    <string name="turns">Turns:</string>
    <string name="checkout">Checkout:</string>
    <string name="avg">Average:</string>
    <string name="dialog_message_missing_file_extension">The specified filename did not contain a \".db\" extension!</string>
    <string name="dialog_title_missing_file_extension">Error: Missing Extension.</string>
    <string name="button_rules">Rules</string>
    <string name="title_info">Info</string>
    <string name="x01_rules">All players starts with X01 points (301, 401, 501 etc).\n\n

        The goal is to have 0 points left. \n\n

        Players take turn to throw 3 darts, the sum of the 3 darts is subtracted from the player\'s current score.
        If the new score is 1 or less than 0 then the player does not receive any points that round.\n\n

        To win (reach 0) the player must hit a double score field with the last arrow, i.e a player cannot go out on an uneven number.
        You can customize how many rounds a player must try to go out on a double, see the \"Double-out attempts\" setting. When you have reached 50 points or lower, the counter will tick down after each round. When the counter hits 0 you can go out on any score field.
     </string>

    <string name="random_rules"> The goal is to score as many points as possible. \n\n
        On each turn, players shall score points on a randomly selected field.\n\n

           1 point for single.\n
           2 points for double.\n
           3 points for triple.\n\n

        When the game is over, if two players are tied for equal points then the winner is decided by the play order.

    </string>

    <string name="successful_export">Successfully exported database</string>
    <string name="successful_import">Successfully imported database</string>
    <string name="unsuccessful_import">Unsuccessful import of database</string>
    <string name="unsuccessful_export">Unsuccessful export of database</string>
    <string name="about">About</string>
    <string name="about_activity">About</string>
    <string name="select_players">Select players</string>
    <string name="new_profile">New Profile</string>
</resources>
