<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/pref_key_x01_starting_score"
        android:title="@string/pref_x01_starting_score"
        android:dialogTitle="@string/pref_x01_starting_score"
        android:entries="@array/x01_starting_score_entries"
        android:entryValues="@array/x01_starting_score_entry_values"
        android:defaultValue="3"
        android:summary="%s" />

    <ListPreference
        android:key="@string/pref_key_x01_double_out_attempts"
        android:title="@string/pref_x01_double_out_attempts"
        android:dialogTitle="@string/pref_x01_double_out_attempts_dialog"
        android:entries="@array/x01_double_out_attempt_entries"
        android:entryValues="@array/x01_double_out_attempt_entry_values"
        android:summary="Double-out, single-out allowed after %s attempts."
        android:defaultValue="5" />
</PreferenceScreen>