<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/num_pad"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_dark"
    android:columnCount="4"
    tools:showIn="@layout/activity_x01_game">

    <Button
        style="?attr/buttonBarButtonStyle"
        android:id="@+id/one"
        android:background="@drawable/button_num_pad"
        android:textColor="@color/main_white"
        android:layout_columnWeight="1"
        android:text="@string/one" />

    <Button
        style="?attr/buttonBarButtonStyle"
        android:id="@+id/two"
        android:background="@drawable/button_num_pad"
        android:textColor="@color/main_white"
        android:layout_columnWeight="1"
        android:text="@string/two" />

    <Button
        style="?attr/buttonBarButtonStyle"
        android:id="@+id/three"
        android:background="@drawable/button_num_pad"
        android:textColor="@color/main_white"
        android:layout_columnWeight="1"
        android:text="@string/three" />

    <ImageButton
        android:contentDescription="@string/button_erase_number"
        android:id="@+id/erase"
        style="?attr/buttonBarButtonStyle"
        android:background="@drawable/button_num_pad"
        android:layout_columnWeight="1"
        android:tint="@color/primary_color"
        android:layout_rowSpan="2"
        android:layout_gravity="fill"
        android:src="@android:drawable/ic_input_delete" />

    <Button
        style="?attr/buttonBarButtonStyle"
        android:id="@+id/four"
        android:background="@drawable/button_num_pad"
        android:textColor="@color/main_white"
        android:layout_columnWeight="1"
        android:text="@string/four" />

    <Button
        style="?attr/buttonBarButtonStyle"
        android:id="@+id/five"
        android:background="@drawable/button_num_pad"
        android:textColor="@color/main_white"
        android:layout_columnWeight="1"
        android:text="@string/five" />

    <Button
        style="?attr/buttonBarButtonStyle"
        android:id="@+id/six"
        android:background="@drawable/button_num_pad"
        android:textColor="@color/main_white"
        android:layout_columnWeight="1"
        android:text="@string/six" />

    <Button
        style="?attr/buttonBarButtonStyle"
        android:id="@+id/seven"
        android:background="@drawable/button_num_pad"
        android:textColor="@color/main_white"
        android:layout_columnWeight="1"
        android:text="@string/seven" />

    <Button
        style="?attr/buttonBarButtonStyle"
        android:id="@+id/eight"
        android:background="@drawable/button_num_pad"
        android:textColor="@color/main_white"
        android:layout_columnWeight="1"
        android:text="@string/eight" />

    <Button
        style="?attr/buttonBarButtonStyle"
        android:id="@+id/nine"
        android:background="@drawable/button_num_pad"
        android:textColor="@color/main_white"
        android:layout_columnWeight="1"
        android:text="@string/nine" />

    <Button
        style="?attr/buttonBarButtonStyle"
        android:id="@+id/zero"
        android:background="@drawable/button_num_pad"
        android:textColor="@color/main_white"
        android:layout_columnWeight="1"
        android:text="@string/button_zero" />

    <FrameLayout
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal"
        android:padding="8dp" >

        <Button
            style="?attr/buttonBarButtonStyle"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/score_input"
            android:background="@drawable/button_default"
            android:textColor="@color/main_white"
            android:elevation="8dp"
            android:text="@string/no_score" />
    </FrameLayout>
</GridLayout>
