<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fraz.dartlog.MainActivity"
    android:background="@drawable/background">

    <ImageView
        android:contentDescription="@string/contentDescription_main_activity_background_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/dart_board_800px"
        android:layout_centerInParent="true"
        android:translationY="400dp"
        android:scaleX="3"
        android:scaleY="3"
        android:alpha=".1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:id="@+id/logo_group">

        <TextView
            android:id="@+id/dart_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dart"
            android:textSize="64sp"
            android:textColor="@color/main_white"
            android:alpha=".80"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log"
            android:textSize="64sp"
            android:textColor="@color/primary_color"
            android:alpha=".80"/>
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="110dp"
        android:layout_below="@id/logo_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/play_x01_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/button_default"
            android:text="@string/button_play_x01"/>

        <Button
            android:id="@+id/play_random_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/button_default"
            android:text="@string/button_play_random"/>

        <Button
            android:id="@+id/profiles_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/button_default"
            android:text="@string/button_profiles"/>
    </LinearLayout>

    <TextView
        android:id="@+id/loginStatusTextView"
        android:layout_margin="8dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tools:text="Logged in as First name Last name"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_above="@id/loginStatusTextView"
        android:layout_margin="8dp"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />


</RelativeLayout>

